--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <br><br>
     <div class="grid">
         <a href="https://trishablessingmassage.com" target="_blank" class="card">
-            <img src="Trisha1.png" alt="Trisha Blessing Massage">
+            <img src="Trisha4.png" alt="Trisha Blessing Massage">
             <div class="overlay">
                 <h3>Trisha Blessing Massage</h3>
                 <p>Outdated website overhaul for local masseuse</p>
@@ -101,18 +101,18 @@
     <br><br>
     <div class="grid">
         <a href="https://bwbl.net/" target="_blank" class="card">
-            <img src="BWBL3.png" alt="BWBL">
+            <img src="BWBL5.png" alt="BWBL">
             <div class="overlay">
                 <h3>BWBL Wiffleball League</h3>
                 <p>Updated site redesign for a wiffle ball leauge</p>
             </div>
         </a>
 
-        <a href="" target="_blank" class="card">
-            <img src="" alt="">
+        <a href="https://kmax607.itch.io/" target="_blank" class="card">
+            <img src="itch.png" alt="">
             <div class="overlay">
-                <h3></h3>
-                <p></p>
+                <h3>My Itch.io Page</h3>
+                <p>Collection of games I've created using the Godot game engine</p>
             </div>
         </a>
     </div>
