--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <img src="BWBL1.png" alt="BWBL">
         </div>
     </div>
-    <br><br>
-    <p></p>
+    <br>
+    <hr class="projects-divider">
     <br><br>
     <div class="grid">
         <a href="https://trishablessingmassage.com" target="_blank" class="card">
