--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <!-- NAVBAR -->
 <header class="navbar">
     <div class="logo">
-        <img src="Max Logo.png" alt="Max Logo">
+        <a href="#top">
+            <img src="Max Logo.png" alt="Max Logo">
+        </a>
     </div>
     <nav>
         <ul class="nav-links">
