--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="icon" type="image/png" href="Max%20Logo.png">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -166,7 +167,10 @@
 </section>
 
 <footer>
-    <p>© 2025 Max Kraus | Thanks for visiting my site</p>
+    <p>
+        © 2025 Max Kraus | Thanks for visiting my site |
+        <img src="Max Logo.png" alt="Max Logo" class="footer-logo">
+    </p>
 </footer>
 
 <script src="script.js"></script>
