--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 <footer>
     <p>
-        © 2025 Max Kraus | Thanks for visiting my site | <img src="Max Logo.png" alt="Max Logo" class="footer-logo">
+        © 2025 Max Kraus | Thanks for visiting | <img src="Max Logo.png" alt="Max Logo" class="footer-logo">
     </p>
 </footer>
 
