--- a/index.html
+++ b/index.html
@@ -143,9 +143,10 @@
     <p>Want a website tailored to your needs? Send me a message</p>
 
     <form
-            action="https://formspree.io/f/yourFormID"
+            action="https://formspree.io/f/mrbawnbg"
             method="POST"
             class="contact-form"
+            target="_blank"
     >
         <div class="form-group">
             <label for="name">Name</label>
