--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 
 <!-- ABOUT -->
 <section id="about" class="about">
-    <h2>About Me</h2>
+    <h1>About Me</h1>
     <br>
-    <p>I’m a web developer passionate about creating clean, user-focused experiences. Skilled in HTML, CSS, JavaScript, and responsive design. I thrive on bringing ideas to life with modern, functional websites that adapt to modern devices of all shapes and sizes.</p>
+    <p class="about-text">I’m a web developer passionate about creating clean, user-focused experiences. Skilled in HTML, CSS, JavaScript, and responsive design. I thrive on bringing ideas to life with modern, functional websites that adapt to modern devices of all shapes and sizes.</p>
     <br>
     <ul class="skills">
         <li>HTML/CSS/JS</li>
