--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
             <img src="Trisha1.png" alt="Trisha Blessing">
             <img src="Rob1.png" alt="Rob Kammen">
             <img src="BWBL1.png" alt="BWBL">
+            <img src="SC4.png" alt="Socially Current">
+            <img src="OneShot3.png" alt="One Shot">
+            <img src="Rob3.png" alt="Rob Kammen">
+            <img src="OneShot4.png" alt="One Shot">
+            <img src="SC5.png" alt="Socially Current">
+            <img src="BWBL6.png" alt="BWBL">
         </div>
     </div>
     <br>
