--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
         </a>
 
-        <a href="https://kmax607.github.io/oneshot/" target="_blank" class="card">
+        <a href="https://oneshotentertainment.net/" target="_blank" class="card">
             <img src="OneShot2.png" alt="One Shot Entertainment">
             <div class="overlay">
                 <h3>One Shot Entertainment</h3>
@@ -113,7 +113,7 @@
             <img src="BWBL5.png" alt="BWBL">
             <div class="overlay">
                 <h3>BWBL Wiffleball League</h3>
-                <p>Updated site redesign for a wiffle ball leauge</p>
+                <p>Updated site redesign for a wiffle ball league</p>
             </div>
         </a>
 
