--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <img src="BWBL5.png" alt="BWBL">
             <div class="overlay">
                 <h3>BWBL Wiffleball League</h3>
-                <p>Updated site redesign for a wiffle ball league</p>
+                <p>Updated site redesign for a Wiffle Ball league</p>
             </div>
         </a>
 
