--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
     <br><br>
     <div class="grid">
-        <a href="https://kmax607.github.io/robkammen/" target="_blank" class="card">
+        <a href="https://www.wilkesbarrepsychologist.com/" target="_blank" class="card">
             <img src="Rob1.png" alt="Wilkes-Barre Psychologist">
             <div class="overlay">
                 <h3>Wilkes-Barre Psychologist</h3>
